feat: heap controller functions + syscalls inline

--- a/tinychain/arch/i386/CMakeLists.txt
+++ b/tinychain/arch/i386/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Add the runtime
-add_library(tinycrt_i386 OBJECT crt0.s syscall.c)
+add_library(tinycrt_i386 OBJECT crt0.s)
 
 target_include_directories(tinycrt_i386 PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
