--- a/tinychain/tinychain.env
+++ b/tinychain/tinychain.env
@@ -18,10 +18,10 @@ _install() {
     echo -e "\033[33m==> Installing Tinychain...\033[0m"
 
     # Clean slate
-    cd $TINYCHAIN_BASE
+    cd "$TINYCHAIN_BASE" || return
     rm -rf build/ install/
 
-    local ARCHS=("i386" "x86_64")
+    local ARCHS=("i386" "x86_64" "arm" "aarch64")
     for ARCH in "${ARCHS[@]}"; do
         echo -e "\033[33m==> Building for $ARCH...\033[0m"
 
@@ -83,13 +83,13 @@ _build() {
     fi
 
     BUILD_DIR="$dir/build"
-    rm -rf $BUILD_DIR
+    rm -rf "$BUILD_DIR"
 
     # CMake
     cmake -B "$BUILD_DIR" \
         -DCMAKE_PREFIX_PATH="$TOOLCHAIN_PATH" \
         -DCMAKE_TOOLCHAIN_FILE="$TOOLCHAIN_FILE" \
-        -DCMAKE_BUILD_TYPE=$build_type
+        -DCMAKE_BUILD_TYPE="$build_type"
     cmake --build "$BUILD_DIR"
 }
 
