fix: More flags for minification

--- a/tinychain/tinychain.env
+++ b/tinychain/tinychain.env
@@ -55,8 +55,8 @@ _build() {
 
     # Args
     local arch="$1"
-    local dir="${2:-.}"
-    local build_type="${3:-Release}"
+    local build_type="${2:-Release}"
+    local dir="${3:-.}"
 
     # Validate build type
     if [[ "$build_type" != "Debug" && "$build_type" != "Release" ]]; then
@@ -69,12 +69,6 @@ _build() {
     # Environment variables
     TOOLCHAIN_FILE="$TINYCHAIN_BASE/arch/$arch/tinychain.cmake"
     TOOLCHAIN_PATH="$TINYCHAIN_PATH/$arch"
-
-    # Ensure runtime matches arch
-    if ! grep -v '^[[:space:]]*#' "$dir/CMakeLists.txt" | grep -iq "tinycrt_$arch"; then
-        echo -e "\033[31mError\033[0m: $arch tinycrt not included!"
-        return 1
-    fi
 
     # Ensure valid arch
     if [[ ! -d "$TOOLCHAIN_PATH" ]]; then
@@ -89,7 +83,8 @@ _build() {
     cmake -B "$BUILD_DIR" \
         -DCMAKE_PREFIX_PATH="$TOOLCHAIN_PATH" \
         -DCMAKE_TOOLCHAIN_FILE="$TOOLCHAIN_FILE" \
-        -DCMAKE_BUILD_TYPE="$build_type"
+        -DCMAKE_BUILD_TYPE="$build_type" \
+        -DARCH="$arch"
     cmake --build "$BUILD_DIR"
 }
 
